# kafkesque

./: Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
.circleci/: config.yml
consumers/: api.py  apps.py  cli.py  consumers.py  models.py  util.py  views.py
consumers/migrations/: 0001_initial.py
kafkesque/: api.py  asgi.py  settings.py  urls.py  wsgi.py
kafkesque/clusters/: admin.py  models.py  schemas.py
kafkesque/clusters/migrations/: 0001_initial.py
kafkesque/consumers/: admin.py  api.py  apps.py  cli.py  commands.py  consumers.py  models.py  schemas.py  util.py  views.py
kafkesque/consumers/migrations/: 0001_initial.py
kafkesque/kafkesque/: asgi.py  models.py  settings.py  urls.py
